--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-/target/
-=======
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -11,6 +8,10 @@
 *.war
 *.ear
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
->>>>>>> branch 'master' of https://github.com/rvcampos/cryptocipher.git
+/build
+/bin
+/target/
+.project
+.classpath
+.project
+.settings.*
